[ADD] check license endpoint
