# backend-license/docs/swagger.json
@@ -10,14 +10,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/v1/product": {
+        "/v1/license": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get all Product data from database",
+                "description": "get all License data from database",
                 "consumes": [
                     "application/json"
                 ],
@@ -25,9 +20,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "license"
                 ],
-                "summary": "Get All Product",
+                "summary": "Get All License",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -42,7 +37,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.ProductResponse"
+                                                "$ref": "#/definitions/model.LicenseResponse"
                                             }
                                         }
                                     }
@@ -89,7 +84,7 @@
                 }
             },
             "post": {
-                "description": "Create New Product",
+                "description": "Create New License",
                 "consumes": [
                     "application/json"
                 ],
@@ -97,17 +92,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "license"
                 ],
-                "summary": "Create Product",
+                "summary": "Create License",
                 "parameters": [
                     {
-                        "description": "Create Product",
-                        "name": "product",
+                        "description": "Create License",
+                        "name": "license",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.ProductRequest"
+                            "$ref": "#/definitions/model.LicenseRequest"
                         }
                     }
                 ],
@@ -123,7 +118,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.ProductResponse"
+                                            "$ref": "#/definitions/model.LicenseResponse"
                                         }
                                     }
                                 }
@@ -169,14 +164,9 @@
                 }
             }
         },
-        "/v1/product/{id}": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Update Product",
+        "/v1/license/check": {
+            "get": {
+                "description": "Check License",
                 "consumes": [
                     "application/json"
                 ],
@@ -184,9 +174,92 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Product"
+                    "License"
                 ],
-                "summary": "Update Product",
+                "summary": "Check License",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "key",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "username",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.WebResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.LicenseResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.WebResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.WebResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/license/{id}": {
+            "put": {
+                "description": "Update License",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "License"
+                ],
+                "summary": "Update License",
                 "parameters": [
                     {
                         "type": "integer",
@@ -195,12 +268,12 @@
                         "in": "path"
                     },
                     {
-                        "description": "Update Product",
-                        "name": "product",
+                        "description": "Update License",
+                        "name": "license",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.ProductRequest"
+                            "$ref": "#/definitions/model.LicenseRequest"
                         }
                     }
                 ],
@@ -216,7 +289,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.ProductResponse"
+                                            "$ref": "#/definitions/model.LicenseResponse"
                                         }
                                     }
                                 }
@@ -262,7 +335,7 @@
                 }
             },
             "delete": {
-                "description": "Delete Product",
+                "description": "Delete License",
                 "consumes": [
                     "application/json"
                 ],
@@ -270,9 +343,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "license"
                 ],
-                "summary": "Delete Product",
+                "summary": "Delete License",
                 "parameters": [
                     {
                         "type": "integer",
@@ -341,28 +414,21 @@
         }
     },
     "definitions": {
-        "model.ProductRequest": {
+        "model.LicenseRequest": {
             "type": "object",
             "properties": {
-                "description": {
-                    "type": "string",
-                    "example": "Macbook Air with apple silicon M1 chip"
+                "is_active": {
+                    "type": "boolean"
                 },
-                "price": {
-                    "type": "string",
-                    "example": "15000000"
+                "key": {
+                    "type": "string"
                 },
-                "stock": {
-                    "type": "string",
-                    "example": "29"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "Macbook Air M1"
+                "username": {
+                    "type": "string"
                 }
             }
         },
-        "model.ProductResponse": {
+        "model.LicenseResponse": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -371,26 +437,20 @@
                 "deleted_at": {
                     "type": "integer"
                 },
-                "description": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
-                "is_master": {
+                "is_active": {
                     "type": "boolean"
                 },
-                "price": {
-                    "type": "string"
-                },
-                "stock": {
-                    "type": "string"
-                },
-                "title": {
+                "key": {
                     "type": "string"
                 },
                 "updated_at": {
                     "type": "integer"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
